# RamdomStock

./: .gitignore  FollowBot.py  FollowBot2.0.py  README.md  application.py  db.sqlite3  followBot3.0.py  helpers.py  manage.py  pyproject.toml  randomstock.db  requirements.txt  requirements.txt.txt  twitterBot.py  twitterBot_2.0.py  twitterBot_3.0.py  unFollowBot.py  unplannedInvestments.db  uwsgi.ini  yahooScript.py
API/: urls.py  views.py
RandomStock/: asgi.py  settings.py  urls.py  wsgi.py
custom_all_auth/: admin.py  apps.py  models.py  urls.py
custom_zinnia/: __init__.py  admin.py  apps.py  urls.py  views.py
flask_session/: tmp059dfr0d.__wz_cache  tmp1hr7l22s.__wz_cache  tmp1ptyzqks.__wz_cache  tmp3a6y0b3_.__wz_cache  tmp3e5_os2b.__wz_cache  tmp3uuaik72.__wz_cache  tmp3wtq26n5.__wz_cache  tmp4vpmfdtw.__wz_cache  tmp63ryb7w0.__wz_cache  tmp6if92qwl.__wz_cache  tmp7idewebx.__wz_cache  tmp7il5uiz9.__wz_cache  tmp81c0qwib.__wz_cache  tmp84q_gy5j.__wz_cache  tmp8cvqv9ri.__wz_cache  tmp9zjb8p5m.__wz_cache  tmp_sgdodad.__wz_cache  tmpay2ghef7.__wz_cache  tmpb1b36mie.__wz_cache  tmpb3ri38ph.__wz_cache  tmpbghe3ypt.__wz_cache  tmpbtpvvkd1.__wz_cache  tmpcf_yczhw.__wz_cache  tmpcw6czm9n.__wz_cache  tmpcxtlnc4c.__wz_cache  tmpcy3zvl_d.__wz_cache  tmpd0r09kgi.__wz_cache  tmpdatq8nu3.__wz_cache  tmpdz9j5vzl.__wz_cache  tmpdzexlgda.__wz_cache  tmpemkm1fc3.__wz_cache  tmpf5ykxnzk.__wz_cache  tmpfzc1eapt.__wz_cache  tmpg2qm3znw.__wz_cache  tmpgybxx06q.__wz_cache  tmphvjnitxz.__wz_cache  tmphzwsr200.__wz_cache  tmpjmue2bqn.__wz_cache  tmpk40ay6st.__wz_cache  (+33 more)
models/: stock.py
(+62 files in other folders)
